[gd_scene load_steps=2 format=3 uid="uid://gkyjomhin0ri"]

[ext_resource type="Script" path="res://src/items/item_slot.gd" id="1_mw8sc"]

[node name="ItemSlot" type="ColorRect"]
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.313726, 0.313726, 0.313726, 1)
script = ExtResource("1_mw8sc")
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
